# mrose

./: .gitattributes  .gitignore  CITATION.cff  DATA_MANIFEST.md  LICENSE  LICENSE_NOTICE.md  MODEL_CHECKSUMS.sha256  README.md  environment.yml  examples_manifest.json  index.html  latest-url.json  latest-url.txt  pyproject.toml  requirements.txt  web-requirements.txt
data/: README.md
docs/: MANUSCRIPT_OVERVIEW.md  PROJECT_STRUCTURE.md  conf.py  experiments.md  generation.md  index.md  installation.md  requirements.txt  web_server.md
docs/notebooks/: mROSE_generation.ipynb  mROSE_generation_demo.ipynb
experiments/3utr_rbp/: README.md  train_3utr_rbp.py
experiments/5utr_mrl/: README.md  train_5utr_mrl.py
experiments/5utr_mrl/example/: run_example.sh  test.csv  (+1 more)
experiments/cds_degradation/: README.md  train_cds.py
experiments/full_length_stability/: README.md
generation/: README.md
generation/3utr/: Model.pth  generate_3utr.py
generation/5utr/: Model.pth  generate_5utr.py
generation/cds/: Model.pth  generate_cds.py
generation/examples/: full_mrna_request.json
generation/full_length/: generate_full_length.py
mrose/: __init__.py  full_length_fusion.py  module_3utr.py  module_5utr.py  module_cds.py
mrose_web/: __init__.py  app.py  jobs.py
mrose_web/static/: index.html
notebooks/: mROSE_generation.ipynb  mROSE_generation_demo.ipynb
scripts/: demo_generate_sequences.py  generate_sequences.py  quick_import_check.py  train_5utr_mrl.sh  train_full_length.py  train_full_length.sh
tests/: test_full_length_generation.py  test_mrose_web_jobs.py
(+17 files in other folders)
